--- a/index.html
+++ b/index.html
@@ -9,17 +9,18 @@
 <script>
 	function kimonoCallback(data) {
   		$(document).ready(function(){
+        var tableString = "table";
   			for(var i = 0; i < data["results"]["collection1"].length; i++) {
   				var player = data["results"]["collection1"][i]["player"];
           var score = data["results"]["collection1"][i]["score"];
 
           if (!picks[player]) {
 
-            $("#results").append("<tr><td>"+(i+1)+"</td><td>"+player+"</td><td></td><td>"+score+"</td></tr>");
+            $("#results").append("<tr><td>"+(i+1)+"</td><td>"+player+"</td><td></td><td></td><td>"+score+"</td></tr>");
 
           }
           else {
-  				$("#results").append("<tr><td>"+(i+1)+"</td><td>"+player+"</td><td>"+picks[player]+"</td><td>"+score+"</td></tr>");
+  				$("#results").append("<tr><td>"+(i+1)+"</td><td>"+player+"</td><td>"+picks[player][0]+"</td><td>"+picks[player][1]+"</td><td>"+score+"</td></tr>");
 
           }
   			}
@@ -40,7 +41,7 @@
 <p>These are just the results from the Shell Houston Open</p>
 <a href="europga.html">Here are the results for the NH Collection Open</a><br><br>
 <table class="table table-striped table-bordered table-hover table-condensed", id="results">
-  <tr><th>Position</th><th>Player</th><th>Sweepstake</th><th>Score</th></tr>
+  <tr><th>Position</th><th>Player</th><th>Sweepstake</th><th>Seed?</th><th>Score</th></tr>
 </table>
 </div>
 </body>
